// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkIconChip should render correctly 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <button
      aria-checked="false"
      class="bpk-chip bpk-chip--default bpk-chip--icon-only"
      role="checkbox"
      title="Filter"
      type="button"
    >
      <span
        class="bpk-chip__leading-accessory-view bpk-chip--icon-only__leading-accessory-view"
      >
        <svg
          aria-hidden="true"
          style="width: 1rem; height: 1rem;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M7.94 1.94A1.5 1.5 0 007.5 3v.75a.75.75 0 01-.75.75H3a1.5 1.5 0 000 3h3.75a.75.75 0 01.75.75V9a1.5 1.5 0 003 0V3a1.5 1.5 0 00-2.56-1.06zm.282 17.56H9a1.5 1.5 0 100-3H3a1.5 1.5 0 100 3h5.222zm6.998.22a.75.75 0 01.53-.22H21a1.5 1.5 0 100-3h-5.25a.75.75 0 01-.75-.75V15a1.5 1.5 0 10-3 0v6a1.5 1.5 0 103 0v-.75a.75.75 0 01.22-.53zM13.94 4.94A1.5 1.5 0 0015 7.5h6a1.5 1.5 0 000-3h-6a1.5 1.5 0 00-1.06.44z"
          />
        </svg>
      </span>
      <span
        class="bpk-text bpk-text--footnote"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`BpkIconChip should render correctly with a "className" attribute 1`] = `
<DocumentFragment>
  <div
    class="custom-class"
  >
    <button
      aria-checked="false"
      class="bpk-chip bpk-chip--default bpk-chip--icon-only"
      role="checkbox"
      title="Filter"
      type="button"
    >
      <span
        class="bpk-chip__leading-accessory-view bpk-chip--icon-only__leading-accessory-view"
      >
        <svg
          aria-hidden="true"
          style="width: 1rem; height: 1rem;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M7.94 1.94A1.5 1.5 0 007.5 3v.75a.75.75 0 01-.75.75H3a1.5 1.5 0 000 3h3.75a.75.75 0 01.75.75V9a1.5 1.5 0 003 0V3a1.5 1.5 0 00-2.56-1.06zm.282 17.56H9a1.5 1.5 0 100-3H3a1.5 1.5 0 100 3h5.222zm6.998.22a.75.75 0 01.53-.22H21a1.5 1.5 0 100-3h-5.25a.75.75 0 01-.75-.75V15a1.5 1.5 0 10-3 0v6a1.5 1.5 0 103 0v-.75a.75.75 0 01.22-.53zM13.94 4.94A1.5 1.5 0 0015 7.5h6a1.5 1.5 0 000-3h-6a1.5 1.5 0 00-1.06.44z"
          />
        </svg>
      </span>
      <span
        class="bpk-text bpk-text--footnote"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`BpkIconChip should render correctly with type="default" 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <button
      aria-checked="false"
      class="bpk-chip bpk-chip--default bpk-chip--icon-only"
      role="checkbox"
      title="Filter"
      type="button"
    >
      <span
        class="bpk-chip__leading-accessory-view bpk-chip--icon-only__leading-accessory-view"
      >
        <svg
          aria-hidden="true"
          style="width: 1rem; height: 1rem;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M7.94 1.94A1.5 1.5 0 007.5 3v.75a.75.75 0 01-.75.75H3a1.5 1.5 0 000 3h3.75a.75.75 0 01.75.75V9a1.5 1.5 0 003 0V3a1.5 1.5 0 00-2.56-1.06zm.282 17.56H9a1.5 1.5 0 100-3H3a1.5 1.5 0 100 3h5.222zm6.998.22a.75.75 0 01.53-.22H21a1.5 1.5 0 100-3h-5.25a.75.75 0 01-.75-.75V15a1.5 1.5 0 10-3 0v6a1.5 1.5 0 103 0v-.75a.75.75 0 01.22-.53zM13.94 4.94A1.5 1.5 0 0015 7.5h6a1.5 1.5 0 000-3h-6a1.5 1.5 0 00-1.06.44z"
          />
        </svg>
      </span>
      <span
        class="bpk-text bpk-text--footnote"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`BpkIconChip should render correctly with type="default" and disabled 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <button
      aria-checked="false"
      class="bpk-chip bpk-chip--default bpk-chip--disabled bpk-chip--default-disabled bpk-chip--icon-only"
      disabled=""
      role="checkbox"
      title="Filter"
      type="button"
    >
      <span
        class="bpk-chip__leading-accessory-view bpk-chip--icon-only__leading-accessory-view"
      >
        <svg
          aria-hidden="true"
          style="width: 1rem; height: 1rem;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M7.94 1.94A1.5 1.5 0 007.5 3v.75a.75.75 0 01-.75.75H3a1.5 1.5 0 000 3h3.75a.75.75 0 01.75.75V9a1.5 1.5 0 003 0V3a1.5 1.5 0 00-2.56-1.06zm.282 17.56H9a1.5 1.5 0 100-3H3a1.5 1.5 0 100 3h5.222zm6.998.22a.75.75 0 01.53-.22H21a1.5 1.5 0 100-3h-5.25a.75.75 0 01-.75-.75V15a1.5 1.5 0 10-3 0v6a1.5 1.5 0 103 0v-.75a.75.75 0 01.22-.53zM13.94 4.94A1.5 1.5 0 0015 7.5h6a1.5 1.5 0 000-3h-6a1.5 1.5 0 00-1.06.44z"
          />
        </svg>
      </span>
      <span
        class="bpk-text bpk-text--footnote"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`BpkIconChip should render correctly with type="default" and selected 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <button
      aria-checked="true"
      class="bpk-chip bpk-chip--default bpk-chip--icon-only bpk-chip--default-selected"
      role="checkbox"
      title="Filter"
      type="button"
    >
      <span
        class="bpk-chip__leading-accessory-view bpk-chip--icon-only__leading-accessory-view"
      >
        <svg
          aria-hidden="true"
          style="width: 1rem; height: 1rem;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M7.94 1.94A1.5 1.5 0 007.5 3v.75a.75.75 0 01-.75.75H3a1.5 1.5 0 000 3h3.75a.75.75 0 01.75.75V9a1.5 1.5 0 003 0V3a1.5 1.5 0 00-2.56-1.06zm.282 17.56H9a1.5 1.5 0 100-3H3a1.5 1.5 0 100 3h5.222zm6.998.22a.75.75 0 01.53-.22H21a1.5 1.5 0 100-3h-5.25a.75.75 0 01-.75-.75V15a1.5 1.5 0 10-3 0v6a1.5 1.5 0 103 0v-.75a.75.75 0 01.22-.53zM13.94 4.94A1.5 1.5 0 0015 7.5h6a1.5 1.5 0 000-3h-6a1.5 1.5 0 00-1.06.44z"
          />
        </svg>
      </span>
      <span
        class="bpk-text bpk-text--footnote"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`BpkIconChip should render correctly with type="default", selected and disabled 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <button
      aria-checked="true"
      class="bpk-chip bpk-chip--default bpk-chip--disabled bpk-chip--default-disabled bpk-chip--icon-only"
      disabled=""
      role="checkbox"
      title="Filter"
      type="button"
    >
      <span
        class="bpk-chip__leading-accessory-view bpk-chip--icon-only__leading-accessory-view"
      >
        <svg
          aria-hidden="true"
          style="width: 1rem; height: 1rem;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M7.94 1.94A1.5 1.5 0 007.5 3v.75a.75.75 0 01-.75.75H3a1.5 1.5 0 000 3h3.75a.75.75 0 01.75.75V9a1.5 1.5 0 003 0V3a1.5 1.5 0 00-2.56-1.06zm.282 17.56H9a1.5 1.5 0 100-3H3a1.5 1.5 0 100 3h5.222zm6.998.22a.75.75 0 01.53-.22H21a1.5 1.5 0 100-3h-5.25a.75.75 0 01-.75-.75V15a1.5 1.5 0 10-3 0v6a1.5 1.5 0 103 0v-.75a.75.75 0 01.22-.53zM13.94 4.94A1.5 1.5 0 0015 7.5h6a1.5 1.5 0 000-3h-6a1.5 1.5 0 00-1.06.44z"
          />
        </svg>
      </span>
      <span
        class="bpk-text bpk-text--footnote"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`BpkIconChip should render correctly with type="on-dark" 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <button
      aria-checked="false"
      class="bpk-chip bpk-chip--on-dark bpk-chip--icon-only"
      role="checkbox"
      title="Filter"
      type="button"
    >
      <span
        class="bpk-chip__leading-accessory-view bpk-chip--icon-only__leading-accessory-view"
      >
        <svg
          aria-hidden="true"
          style="width: 1rem; height: 1rem;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M7.94 1.94A1.5 1.5 0 007.5 3v.75a.75.75 0 01-.75.75H3a1.5 1.5 0 000 3h3.75a.75.75 0 01.75.75V9a1.5 1.5 0 003 0V3a1.5 1.5 0 00-2.56-1.06zm.282 17.56H9a1.5 1.5 0 100-3H3a1.5 1.5 0 100 3h5.222zm6.998.22a.75.75 0 01.53-.22H21a1.5 1.5 0 100-3h-5.25a.75.75 0 01-.75-.75V15a1.5 1.5 0 10-3 0v6a1.5 1.5 0 103 0v-.75a.75.75 0 01.22-.53zM13.94 4.94A1.5 1.5 0 0015 7.5h6a1.5 1.5 0 000-3h-6a1.5 1.5 0 00-1.06.44z"
          />
        </svg>
      </span>
      <span
        class="bpk-text bpk-text--footnote"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`BpkIconChip should render correctly with type="on-dark" and disabled 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <button
      aria-checked="false"
      class="bpk-chip bpk-chip--on-dark bpk-chip--disabled bpk-chip--on-dark-disabled bpk-chip--icon-only"
      disabled=""
      role="checkbox"
      title="Filter"
      type="button"
    >
      <span
        class="bpk-chip__leading-accessory-view bpk-chip--icon-only__leading-accessory-view"
      >
        <svg
          aria-hidden="true"
          style="width: 1rem; height: 1rem;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M7.94 1.94A1.5 1.5 0 007.5 3v.75a.75.75 0 01-.75.75H3a1.5 1.5 0 000 3h3.75a.75.75 0 01.75.75V9a1.5 1.5 0 003 0V3a1.5 1.5 0 00-2.56-1.06zm.282 17.56H9a1.5 1.5 0 100-3H3a1.5 1.5 0 100 3h5.222zm6.998.22a.75.75 0 01.53-.22H21a1.5 1.5 0 100-3h-5.25a.75.75 0 01-.75-.75V15a1.5 1.5 0 10-3 0v6a1.5 1.5 0 103 0v-.75a.75.75 0 01.22-.53zM13.94 4.94A1.5 1.5 0 0015 7.5h6a1.5 1.5 0 000-3h-6a1.5 1.5 0 00-1.06.44z"
          />
        </svg>
      </span>
      <span
        class="bpk-text bpk-text--footnote"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`BpkIconChip should render correctly with type="on-dark" and selected 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <button
      aria-checked="true"
      class="bpk-chip bpk-chip--on-dark bpk-chip--icon-only bpk-chip--on-dark-selected"
      role="checkbox"
      title="Filter"
      type="button"
    >
      <span
        class="bpk-chip__leading-accessory-view bpk-chip--icon-only__leading-accessory-view"
      >
        <svg
          aria-hidden="true"
          style="width: 1rem; height: 1rem;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M7.94 1.94A1.5 1.5 0 007.5 3v.75a.75.75 0 01-.75.75H3a1.5 1.5 0 000 3h3.75a.75.75 0 01.75.75V9a1.5 1.5 0 003 0V3a1.5 1.5 0 00-2.56-1.06zm.282 17.56H9a1.5 1.5 0 100-3H3a1.5 1.5 0 100 3h5.222zm6.998.22a.75.75 0 01.53-.22H21a1.5 1.5 0 100-3h-5.25a.75.75 0 01-.75-.75V15a1.5 1.5 0 10-3 0v6a1.5 1.5 0 103 0v-.75a.75.75 0 01.22-.53zM13.94 4.94A1.5 1.5 0 0015 7.5h6a1.5 1.5 0 000-3h-6a1.5 1.5 0 00-1.06.44z"
          />
        </svg>
      </span>
      <span
        class="bpk-text bpk-text--footnote"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`BpkIconChip should render correctly with type="on-dark", selected and disabled 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <button
      aria-checked="true"
      class="bpk-chip bpk-chip--on-dark bpk-chip--disabled bpk-chip--on-dark-disabled bpk-chip--icon-only"
      disabled=""
      role="checkbox"
      title="Filter"
      type="button"
    >
      <span
        class="bpk-chip__leading-accessory-view bpk-chip--icon-only__leading-accessory-view"
      >
        <svg
          aria-hidden="true"
          style="width: 1rem; height: 1rem;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M7.94 1.94A1.5 1.5 0 007.5 3v.75a.75.75 0 01-.75.75H3a1.5 1.5 0 000 3h3.75a.75.75 0 01.75.75V9a1.5 1.5 0 003 0V3a1.5 1.5 0 00-2.56-1.06zm.282 17.56H9a1.5 1.5 0 100-3H3a1.5 1.5 0 100 3h5.222zm6.998.22a.75.75 0 01.53-.22H21a1.5 1.5 0 100-3h-5.25a.75.75 0 01-.75-.75V15a1.5 1.5 0 10-3 0v6a1.5 1.5 0 103 0v-.75a.75.75 0 01.22-.53zM13.94 4.94A1.5 1.5 0 0015 7.5h6a1.5 1.5 0 000-3h-6a1.5 1.5 0 00-1.06.44z"
          />
        </svg>
      </span>
      <span
        class="bpk-text bpk-text--footnote"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`BpkIconChip should render correctly with type="on-image" 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <button
      aria-checked="false"
      class="bpk-chip bpk-chip--on-image bpk-chip--icon-only"
      role="checkbox"
      title="Filter"
      type="button"
    >
      <span
        class="bpk-chip__leading-accessory-view bpk-chip--icon-only__leading-accessory-view"
      >
        <svg
          aria-hidden="true"
          style="width: 1rem; height: 1rem;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M7.94 1.94A1.5 1.5 0 007.5 3v.75a.75.75 0 01-.75.75H3a1.5 1.5 0 000 3h3.75a.75.75 0 01.75.75V9a1.5 1.5 0 003 0V3a1.5 1.5 0 00-2.56-1.06zm.282 17.56H9a1.5 1.5 0 100-3H3a1.5 1.5 0 100 3h5.222zm6.998.22a.75.75 0 01.53-.22H21a1.5 1.5 0 100-3h-5.25a.75.75 0 01-.75-.75V15a1.5 1.5 0 10-3 0v6a1.5 1.5 0 103 0v-.75a.75.75 0 01.22-.53zM13.94 4.94A1.5 1.5 0 0015 7.5h6a1.5 1.5 0 000-3h-6a1.5 1.5 0 00-1.06.44z"
          />
        </svg>
      </span>
      <span
        class="bpk-text bpk-text--footnote"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`BpkIconChip should render correctly with type="on-image" and disabled 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <button
      aria-checked="false"
      class="bpk-chip bpk-chip--on-image bpk-chip--disabled bpk-chip--on-image-disabled bpk-chip--icon-only"
      disabled=""
      role="checkbox"
      title="Filter"
      type="button"
    >
      <span
        class="bpk-chip__leading-accessory-view bpk-chip--icon-only__leading-accessory-view"
      >
        <svg
          aria-hidden="true"
          style="width: 1rem; height: 1rem;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M7.94 1.94A1.5 1.5 0 007.5 3v.75a.75.75 0 01-.75.75H3a1.5 1.5 0 000 3h3.75a.75.75 0 01.75.75V9a1.5 1.5 0 003 0V3a1.5 1.5 0 00-2.56-1.06zm.282 17.56H9a1.5 1.5 0 100-3H3a1.5 1.5 0 100 3h5.222zm6.998.22a.75.75 0 01.53-.22H21a1.5 1.5 0 100-3h-5.25a.75.75 0 01-.75-.75V15a1.5 1.5 0 10-3 0v6a1.5 1.5 0 103 0v-.75a.75.75 0 01.22-.53zM13.94 4.94A1.5 1.5 0 0015 7.5h6a1.5 1.5 0 000-3h-6a1.5 1.5 0 00-1.06.44z"
          />
        </svg>
      </span>
      <span
        class="bpk-text bpk-text--footnote"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`BpkIconChip should render correctly with type="on-image" and selected 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <button
      aria-checked="true"
      class="bpk-chip bpk-chip--on-image bpk-chip--icon-only bpk-chip--on-image-selected"
      role="checkbox"
      title="Filter"
      type="button"
    >
      <span
        class="bpk-chip__leading-accessory-view bpk-chip--icon-only__leading-accessory-view"
      >
        <svg
          aria-hidden="true"
          style="width: 1rem; height: 1rem;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M7.94 1.94A1.5 1.5 0 007.5 3v.75a.75.75 0 01-.75.75H3a1.5 1.5 0 000 3h3.75a.75.75 0 01.75.75V9a1.5 1.5 0 003 0V3a1.5 1.5 0 00-2.56-1.06zm.282 17.56H9a1.5 1.5 0 100-3H3a1.5 1.5 0 100 3h5.222zm6.998.22a.75.75 0 01.53-.22H21a1.5 1.5 0 100-3h-5.25a.75.75 0 01-.75-.75V15a1.5 1.5 0 10-3 0v6a1.5 1.5 0 103 0v-.75a.75.75 0 01.22-.53zM13.94 4.94A1.5 1.5 0 0015 7.5h6a1.5 1.5 0 000-3h-6a1.5 1.5 0 00-1.06.44z"
          />
        </svg>
      </span>
      <span
        class="bpk-text bpk-text--footnote"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`BpkIconChip should render correctly with type="on-image", selected and disabled 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <button
      aria-checked="true"
      class="bpk-chip bpk-chip--on-image bpk-chip--disabled bpk-chip--on-image-disabled bpk-chip--icon-only"
      disabled=""
      role="checkbox"
      title="Filter"
      type="button"
    >
      <span
        class="bpk-chip__leading-accessory-view bpk-chip--icon-only__leading-accessory-view"
      >
        <svg
          aria-hidden="true"
          style="width: 1rem; height: 1rem;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M7.94 1.94A1.5 1.5 0 007.5 3v.75a.75.75 0 01-.75.75H3a1.5 1.5 0 000 3h3.75a.75.75 0 01.75.75V9a1.5 1.5 0 003 0V3a1.5 1.5 0 00-2.56-1.06zm.282 17.56H9a1.5 1.5 0 100-3H3a1.5 1.5 0 100 3h5.222zm6.998.22a.75.75 0 01.53-.22H21a1.5 1.5 0 100-3h-5.25a.75.75 0 01-.75-.75V15a1.5 1.5 0 10-3 0v6a1.5 1.5 0 103 0v-.75a.75.75 0 01.22-.53zM13.94 4.94A1.5 1.5 0 0015 7.5h6a1.5 1.5 0 000-3h-6a1.5 1.5 0 00-1.06.44z"
          />
        </svg>
      </span>
      <span
        class="bpk-text bpk-text--footnote"
      />
    </button>
  </div>
</DocumentFragment>
`;
